--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -12,7 +12,7 @@
 */html, body {
   height: 100%;
       background-color: black;
-      color: #aaa;
+      color: #ddd;
 } *, *::before, *::after {
   box-sizing: border-box;
 }  * {
@@ -60,12 +60,64 @@ main {
   margin: 0 auto;
 }
 
-table {
-  margin-right: 2rem;
-}
-
 
 td:nth-child(n+2) {
   padding-left: 0.8rem;
   text-align: right;
+  color: #bbb;
+}
+
+
+.cards1 {
+  display: flex;
+}
+
+.cards1 > table {
+  align-self: flex-start;
+  border-top: 1px solid #777;
+  margin-right:40px;
+  width: 190px;
+}
+
+.cards2 {
+  display: flex;
+}
+
+.cards2 > table {
+  align-self: flex-start;
+  border-top: 1px solid #777;
+  margin-right:40px;
+  width: 150px;
+}
+
+.cards3 {
+  display: flex;
+}
+
+.cards3 > table {
+  align-self: flex-start;
+  border-top: 1px solid #777;
+  margin-right:40px;
+  width: 260px;
+}
+
+
+h1 {
+  margin-bottom: 0.9rem;
+  padding-top: 1.4rem;
+  color: #777;
+}
+
+h2 {
+  margin-bottom: 0.7rem;
+  padding-top: 2.4rem;
+  color: #777;
+}
+
+.accuracy_roller {
+  background-color: #000;
+  color: #bb3431;
+  border: 0;
+  padding: 0px;
+  margin: 0px;
 }
