--- a/src/template.j2
+++ b/src/template.j2
@@ -171,14 +171,16 @@
 
     <h2>Range Attack<br />
       <div class="h2small">
-        Natural:
-        <span id="Roll_Natural">0</span> -
         Damage:
         <span id="Total_Damage">0</span>
       </div>
     </h2>
     <div class="cards2">
       <table>
+        <tr>
+          <td>Natural:</td>
+          <td id="Roll_Natural">-</td>
+        </tr>
         <tr>
           <td>Modifier:</td>
           <td id="Accuracy_Adjustment">-</td>
@@ -297,10 +299,6 @@
 
     <h2>Melee Attack
       <div class="h2small">
-        Natural:
-        <span id="Melee_Natural">0</span> -
-        Mod:
-        <span id="Melee_Mod"></span> -
         Damage:
         <span id="Melee_Damage">0</span>
       </div>
@@ -310,6 +308,15 @@
         <tr>
           <td>1d4</td>
           <td><button class="melee_roller" data-value="4">Roll</button></td>
+        </tr>
+        <tr>
+          <td>Natural:</td>
+          <td id="Melee_Natural">0</td>
+        </tr>
+        <tr>
+          <td>
+            Mod:</td>
+          <td id="Melee_Mod"></td>
         </tr>
       </table>
     </div>
