--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -58,18 +58,31 @@ td {
 main {
   max-width: 920px;
   margin: 0 auto;
+  padding-bottom: 3.7rem;
 }
 
 
-td:nth-child(n+2) {
+.cards1 td:nth-child(n+2) {
   padding-left: 0.8rem;
   text-align: right;
   color: #bbb;
 }
 
+.cards2 td:nth-child(n+2) {
+  padding-left: 0.8rem;
+  text-align: right;
+  color: #bbb;
+}
+
+.cards3 td:nth-child(n+2) {
+  padding-left: 0.8rem;
+  text-align: right;
+  color: #bbb;
+}
 
 .cards1 {
   display: flex;
+  padding-left: 0.5rem;
 }
 
 .cards1 > table {
@@ -83,6 +96,7 @@ td:nth-child(n+2) {
 
 .cards2 {
   display: flex;
+  padding-left: 0.5rem;
 }
 
 .cards2 > table {
@@ -96,6 +110,7 @@ td:nth-child(n+2) {
 
 .cards3 {
   display: flex;
+  padding-left: 0.5rem;
 }
 
 .cards3 > table {
@@ -107,9 +122,24 @@ td:nth-child(n+2) {
   width: 260px;
 }
 
+.cards4 {
+  display: flex;
+  padding-left: 0.5rem;
+}
+
+.cards4 > table {
+  align-self: flex-start;
+  border: 1px solid #444;
+  border-radius: 8px;
+  margin-right:40px;
+  min-width: 300px;
+  padding: 6px;
+}
+
 
 h1 {
   margin-bottom: 0.9rem;
+  padding-left: 1rem;
   padding-top: 1.4rem;
   color: #999;
 }
@@ -118,11 +148,11 @@ h2 {
   margin-bottom: 0.7rem;
   margin-top: 2.4rem;
   padding-bottom: 0.2rem;
-  padding-left: 0.5rem;
+  padding-left: 1rem;
   padding-top: 0.8rem;
   color: #999;
   border-top: 2px solid #555;
-  border-radius: 8px;
+  border-top-left-radius: 16px;
 }
 
 .h2small {
