--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -87,9 +87,10 @@ main {
 
 .cards1 > table {
   align-self: flex-start;
-  border-top: 1px solid #444;
-  border-top-left-radius: 8px;
-  margin-right:40px;
+  background-color: #222;
+  border: 1px solid #666;
+  border-radius: 8px;
+  margin-right:30px;
   padding: 6px;
   width: 190px;
 }
@@ -101,9 +102,10 @@ main {
 
 .cards2 > table {
   align-self: flex-start;
-  border-top: 1px solid #444;
-  border-top-left-radius: 8px;
-  margin-right:40px;
+  background-color: #222;
+  border: 1px solid #666;
+  border-radius: 8px;
+  margin-right:30px;
   padding: 6px;
   width: 220px;
 }
@@ -115,9 +117,10 @@ main {
 
 .cards3 > table {
   align-self: flex-start;
-  border: 1px solid #444;
+  background-color: #222;
+  border: 1px solid #666;
   border-radius: 8px;
-  margin-right:40px;
+  margin-right:30px;
   padding: 6px;
   width: 260px;
 }
@@ -129,9 +132,10 @@ main {
 
 .cards4 > table {
   align-self: flex-start;
-  border: 1px solid #444;
+  background-color: #222;
+  border: 1px solid #666;
   border-radius: 8px;
-  margin-right:40px;
+  margin-right:30px;
   min-width: 300px;
   padding: 6px;
 }
@@ -151,8 +155,6 @@ h2 {
   padding-left: 1rem;
   padding-top: 0.8rem;
   color: #999;
-  border-top: 2px solid #555;
-  border-top-left-radius: 16px;
 }
 
 .h2small {
@@ -160,9 +162,13 @@ h2 {
 }
 
 .accuracy_roller, .check_roller, .general_roller, .initiative_roller, .melee_roller {
-  background-color: #000;
+  background-color: #222;
   color: #bb3431;
   border: 0;
   padding: 0px;
   margin: 0px;
+}
+
+.plus:before {
+  content: "+"
 }
