--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -161,7 +161,7 @@ h2 {
   font-size: 1.1rem;
 }
 
-.accuracy_roller, .check_roller, .general_roller, .initiative_roller, .melee_roller {
+.roller {
   background-color: #222;
   color: #bb3431;
   border: 0;
