--- a/site/styles/global.css
+++ b/site/styles/global.css
@@ -172,3 +172,15 @@ h2 {
 .plus:before {
   content: "+"
 }
+
+footer {
+  text-align: center;
+  margin-bottom: 1.4rem;
+  font-size: 0.9rem;
+}
+
+a {
+  color: #bb3431;
+  text-decoration: none;
+}
+
